--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -106,6 +106,11 @@
           <groupId>io.ktor</groupId>
           <artifactId>ktor-server-netty-jvm</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>4.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
