--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:watch": "pnpm run shnip && pnpm vitest --config vite.config.ts --watch",
     "test:browser": "pnpm -r test:browser",
     "test:versions": "node check-versions.js",
+    "test:js": "pnpm run shnip && pnpm vitest run --config vite.config.ts --no-threads",
     "test:kotlin": "./site/testsuites/testsuite-kotlin/mvnw clean verify -f site/testsuites/testsuite-kotlin",
     "test:swift": "swift test --package-path ./site/testsuites/testsuite-swift",
     "test:rust": "cd ./site/testsuites/testsuite-rust && cargo test",
