--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -192,6 +192,12 @@
             <name>jboss</name>
             <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
         </repository>
+        <!-- Address Danubetech being down -->
+        <repository>
+            <id>tbd-danubetech-temp</id>
+            <name>tbd-danubetech-temp</name>
+            <url>https://blockxyz.jfrog.io/ui/native/danubetech-temp/</url>
+        </repository>
         <!--
         More ALR Dark Arts, remove this once we are no longer relying on tbdex-kt:SNAPSHOTs
         -->
