--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -196,8 +196,16 @@
         <repository>
             <id>tbd-danubetech-temp</id>
             <name>tbd-danubetech-temp</name>
+            <repository>
+            <releases>
+              <enabled>true</enabled>
+              <checksumPolicy>ignore</checksumPolicy>
+            </releases>
+            <snapshots>
+              <enabled>false</enabled>
+              <checksumPolicy>warn</checksumPolicy>
+            </snapshots>
             <url>https://blockxyz.jfrog.io/ui/native/danubetech-temp/</url>
-            <checksumPolicy>warn</checksumPolicy>
         </repository>
         <!--
         More ALR Dark Arts, remove this once we are no longer relying on tbdex-kt:SNAPSHOTs
