--- a/site/testsuites/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/required-sdks.gradle
+++ b/site/testsuites/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/required-sdks.gradle
@@ -5,8 +5,8 @@ repositories {
     maven("https://repo.danubetech.com/repository/maven-public/")
 }
 dependencies {
-    implementation("xyz.block:web5-credentials:0.0.9-delta")
-    implementation("xyz.block:web5-dids:0.0.9-delta")
-    implementation("com.github.TBD54566975:tbdex-kt:0.7.2-beta")
+    implementation("xyz.block:web5-credentials:0.0.11")
+    implementation("xyz.block:web5-dids:0.0.11")
+    implementation("com.github.TBD54566975:tbdex-kt:0.10.0-beta")
 }
 // :snippet-end:
