--- a/package.json
+++ b/package.json
@@ -27,18 +27,19 @@
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@web5/api": "0.8.4",
-    "@web5/credentials": "0.4.1",
-    "@web5/dids": "0.2.3",
     "@tbdex/http-client": "0.25.0",
     "@tbdex/http-server": "0.25.0",
     "@tbdex/protocol": "0.25.0",
-    "bluehawk": "1.4.0",
+    "@web5/api": "0.8.4",
+    "@web5/credentials": "0.4.1",
+    "@web5/dids": "0.2.3",
     "@web5/identity-agent": "0.2.5",
+    "bluehawk": "1.4.0",
+    "express": "4.18.2",
     "font-awesome": "4.7.0",
     "googleapis": "128.0.0",
-    "node-fetch": "3.3.2",
     "msw": "2.1.7",
+    "node-fetch": "3.3.2",
     "process": "0.11.10",
     "react-fontawesome": "1.7.1",
     "react-markdown": "8.0.7",
@@ -53,6 +54,7 @@
     "husky": "8.0.3",
     "playwright": "1.39.0",
     "start-server-and-test": "2.0.2",
+    "supertest": "6.3.3",
     "vitest": "0.33.0",
     "webdriverio": "8.13.13"
   }
