--- a/shnippet.config.json
+++ b/shnippet.config.json
@@ -1,7 +1,7 @@
 {
   "rootDirectory": "./site/testsuites",
   "outputDirectory": "./site/snippets",
-  "fileExtensions": [".js", ".ts", ".kt", ".gradle", ".xml", ".bash"],
+  "fileExtensions": [".java", ".js", ".ts", ".kt", ".gradle", ".xml", ".bash"],
   "exclude": ["pfiOverviewReadOfferingsJs", "pfiOverviewWriteJs", "pfiOverviewWriteOfferingsJs"],
   "snippetTags": {
     "start": ":snippet-start:",
