--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -13,6 +13,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>17</java.version>
         <kotlin.jvm.target>17</kotlin.jvm.target>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
         <version.assertj>3.25.2</version.assertj>
@@ -121,8 +122,8 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
-        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
+        <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
+        <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
@@ -179,6 +180,66 @@
                 <configuration>
                     <jvmTarget>${kotlin.jvm.target}</jvmTarget>
                 </configuration>
+                <executions>
+                  <execution>
+                    <id>compile</id>
+                    <phase>process-sources</phase>
+                    <goals>
+                      <goal>compile</goal>
+                    </goals>
+                    <configuration>
+                      <sourceDirs>
+                        <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                        <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+                      </sourceDirs>
+                    </configuration>
+                  </execution>
+                  <execution>
+                    <id>test-compile</id>
+                    <phase>process-test-sources</phase>
+                    <goals>
+                      <goal>test-compile</goal>
+                    </goals>
+                    <configuration>
+                      <sourceDirs>
+                        <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                        <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
+                      </sourceDirs>
+                    </configuration>
+                  </execution>
+                </executions>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                <source>${java.version}</source>
+                <target>${java.version}</target>
+              </configuration>
+              <executions>
+                <execution>
+                  <id>default-compile</id>
+                  <phase>none</phase>
+                </execution>
+                <execution>
+                  <id>default-testCompile</id>
+                  <phase>none</phase>
+                </execution>
+                <execution>
+                  <id>java-compile</id>
+                  <phase>compile</phase>
+                  <goals>
+                    <goal>compile</goal>
+                  </goals>
+                </execution>
+                <execution>
+                  <id>java-test-compile</id>
+                  <phase>test-compile</phase>
+                  <goals>
+                    <goal>testCompile</goal>
+                  </goals>
+                </execution>
+              </executions>
             </plugin>
         </plugins>
     </build>
