--- a/package.json
+++ b/package.json
@@ -35,17 +35,16 @@
     "@tbdex/protocol": "0.26.0",
     "bluehawk": "1.4.0",
     "@web5/identity-agent": "0.2.5",
-    "bluehawk": "1.4.0",
-    "express": "4.18.2",
     "font-awesome": "4.7.0",
     "googleapis": "128.0.0",
-    "msw": "2.1.7",
     "node-fetch": "3.3.2",
+    "msw": "2.1.7",
     "process": "0.11.10",
     "react-fontawesome": "1.7.1",
     "react-markdown": "8.0.7",
     "react-slick": "0.29.0",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "express": "4.18.2"
   },
   "devDependencies": {
     "@vitest/browser": "0.33.0",
