--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@web5/api": "0.8.4",
     "@web5/credentials": "0.4.2",
     "@web5/dids": "0.4.1",
+    "@web5/crypto": "0.4.0",
+    "@web5/crypto-aws-kms": "0.2.0",
     "@tbdex/http-client": "0.26.0",
     "@tbdex/http-server": "0.26.0",
     "@tbdex/protocol": "0.26.0",
