--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "preinstall": "node propagateWeb5.js && npx only-allow pnpm",
+    "preinstall": "node propagateSdkVersions.js && npx only-allow pnpm",
     "start": "pnpm run shnip && pnpm --filter site run start",
     "start:feedback-server": "pnpm --filter feedback-server run start",
     "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
@@ -39,7 +39,6 @@
     "@web5/dids": "0.4.1",
     "@web5/identity-agent": "0.2.5",
     "bluehawk": "1.4.0",
-    "express": "4.18.2",
     "font-awesome": "4.7.0",
     "googleapis": "128.0.0",
     "msw": "2.1.7",
@@ -48,7 +47,9 @@
     "react-fontawesome": "1.7.1",
     "react-markdown": "8.0.7",
     "react-slick": "0.29.0",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "express": "4.18.2",
+    "xml2js": "0.6.2"
   },
   "devDependencies": {
     "@vitest/browser": "0.34.1",
