--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project>
-  <xmlns>http://maven.apache.org/POM/4.0.0</xmlns>
-  <xmlns:xsi>http://www.w3.org/2001/XMLSchema-instance</xmlns:xsi>
-  <xsi:schemaLocation>http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd</xsi:schemaLocation>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>website.tbd.developer.site</groupId>
   <artifactId>kotlin-testsuite</artifactId>
@@ -17,7 +15,7 @@
     <version.kotlin>1.9.22</version.kotlin>
     <version.kotlin.compiler.incremental>true</version.kotlin.compiler.incremental>
     <version.junit-jupiter>5.10.1</version.junit-jupiter>
-    <version.tbdex>0.10.0-hey</version.tbdex>
+    <version.tbdex>0.12.0-beta</version.tbdex>
     <version.ktor>2.3.7</version.ktor>
   </properties>
   <dependencyManagement>
@@ -48,7 +46,7 @@
       <dependency>
         <groupId>xyz.block</groupId>
         <artifactId>tbdex</artifactId>
-        <version>0.10.0-yessier</version>
+        <version>0.12.0-beta</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
@@ -114,7 +112,7 @@
     <dependency>
       <groupId>xyz.block</groupId>
       <artifactId>tbdex</artifactId>
-      <version>0.10.0-yessier</version>
+      <version>0.12.0-beta</version>
     </dependency>
     <dependency>
       <groupId>io.ktor</groupId>
