--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -1,170 +1,97 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <groupId>website.tbd.developer.site</groupId>
-    <artifactId>kotlin-testsuite</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
-
-    <name>kotlin-testsuite</name>
-    <url>http://developer.tbd.website</url>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.jvm.target>17</kotlin.jvm.target>
-        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-        <version.assertj>3.25.2</version.assertj>
-        <version.kotlin>1.9.22</version.kotlin>
-        <version.kotlin.compiler.incremental>true</version.kotlin.compiler.incremental>
-        <version.junit-jupiter>5.10.1</version.junit-jupiter>
-
-        <!-- TBD Dependencies -->
-        <!--
-        These need to be uniformly updated as part of the
-        single dependency script from Nick
-        -->
-        <version.tbdex>0.10.0-beta</version.tbdex>
-
-        <!-- Test Dependencies -->
-        <version.ktor>2.3.7</version.ktor>
-
-    </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <!-- External Dependencies -->
-            <dependency>
-                <groupId>org.assertj</groupId>
-                <artifactId>assertj-core</artifactId>
-                <version>${version.assertj}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>${version.junit-jupiter}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-engine</artifactId>
-                <version>${version.junit-jupiter}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-stdlib</artifactId>
-                <version>${version.kotlin}</version>
-            </dependency>
-
-            <!-- TBD Dependencies -->
-            <dependency>
-              <groupId>xyz.block</groupId>
-              <artifactId>tbdex</artifactId>
-              <version>${version.tbdex}</version>
-            </dependency>
-
-            <!--
-
-            Hack: align versions misaligned between Web5 and tbDEX
-            Remove when aligned upstream and Dev Site is upgraded to new tbDEX
-
-            -->
-            <dependency>
-              <groupId>io.ktor</groupId>
-              <artifactId>ktor-client-okhttp-jvm</artifactId>
-              <version>${version.ktor}</version>
-            </dependency>
-            <dependency>
-              <groupId>io.ktor</groupId>
-              <artifactId>ktor-client-content-negotiation-jvm</artifactId>
-              <version>${version.ktor}</version>
-            </dependency>
-            <dependency>
-              <groupId>io.ktor</groupId>
-              <artifactId>ktor-serialization-jackson-jvm</artifactId>
-              <version>${version.ktor}</version>
-            </dependency>
-            <dependency>
-              <groupId>io.ktor</groupId>
-              <artifactId>ktor-serialization-kotlinx-json-jvm</artifactId>
-              <version>${version.ktor}</version>
-            </dependency>
-            <dependency>
-              <groupId>io.ktor</groupId>
-              <artifactId>ktor-serialization-kotlinx-jvm</artifactId>
-              <version>${version.ktor}</version>
-            </dependency>
-            <dependency>
-              <groupId>io.ktor</groupId>
-              <artifactId>ktor-client-logging-jvm</artifactId>
-              <version>${version.ktor}</version>
-            </dependency>
-
-            <!-- Test Dependencies -->
-            <dependency>
-              <groupId>io.ktor</groupId>
-              <artifactId>ktor-server-netty-jvm</artifactId>
-              <version>${version.ktor}</version>
-              <scope>test</scope>
-            </dependency>
-            <dependency>
-              <groupId>io.ktor</groupId>
-              <artifactId>ktor-server-content-negotiation-jvm</artifactId>
-              <version>${version.ktor}</version>
-              <scope>test</scope>
-            </dependency>
-
-        </dependencies>
-    </dependencyManagement>
-
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<project>
+  <xmlns>http://maven.apache.org/POM/4.0.0</xmlns>
+  <xmlns:xsi>http://www.w3.org/2001/XMLSchema-instance</xmlns:xsi>
+  <xsi:schemaLocation>http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd</xsi:schemaLocation>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>website.tbd.developer.site</groupId>
+  <artifactId>kotlin-testsuite</artifactId>
+  <version>0.1.0-SNAPSHOT</version>
+  <name>kotlin-testsuite</name>
+  <url>http://developer.tbd.website</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <kotlin.jvm.target>17</kotlin.jvm.target>
+    <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
+    <version.assertj>3.25.2</version.assertj>
+    <version.kotlin>1.9.22</version.kotlin>
+    <version.kotlin.compiler.incremental>true</version.kotlin.compiler.incremental>
+    <version.junit-jupiter>5.10.1</version.junit-jupiter>
+    <version.tbdex>0.10.0-hey</version.tbdex>
+    <version.ktor>2.3.7</version.ktor>
+  </properties>
+  <dependencyManagement>
     <dependencies>
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-        </dependency>
-
-        <!-- TBD Dependencies -->
-        <dependency>
-          <groupId>xyz.block</groupId>
-          <artifactId>tbdex</artifactId>
-        </dependency>
-
-        <!-- Test Dependencies -->
-        <dependency>
-          <groupId>io.ktor</groupId>
-          <artifactId>ktor-server-netty-jvm</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>mockwebserver</artifactId>
-            <version>4.11.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.ktor</groupId>
-            <artifactId>ktor-server-test-host</artifactId>
-            <version>${version.ktor}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-          <groupId>io.ktor</groupId>
-          <artifactId>ktor-server-content-negotiation-jvm</artifactId>
-        </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>${version.assertj}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>${version.junit-jupiter}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>${version.junit-jupiter}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.jetbrains.kotlin</groupId>
+        <artifactId>kotlin-stdlib</artifactId>
+        <version>${version.kotlin}</version>
+      </dependency>
+      <dependency>
+        <groupId>xyz.block</groupId>
+        <artifactId>tbdex</artifactId>
+        <version>${version.tbdex}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.ktor</groupId>
+        <artifactId>ktor-client-okhttp-jvm</artifactId>
+        <version>${version.ktor}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.ktor</groupId>
+        <artifactId>ktor-client-content-negotiation-jvm</artifactId>
+        <version>${version.ktor}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.ktor</groupId>
+        <artifactId>ktor-serialization-jackson-jvm</artifactId>
+        <version>${version.ktor}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.ktor</groupId>
+        <artifactId>ktor-serialization-kotlinx-json-jvm</artifactId>
+        <version>${version.ktor}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.ktor</groupId>
+        <artifactId>ktor-serialization-kotlinx-jvm</artifactId>
+        <version>${version.ktor}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.ktor</groupId>
+        <artifactId>ktor-client-logging-jvm</artifactId>
+        <version>${version.ktor}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.ktor</groupId>
+        <artifactId>ktor-server-netty-jvm</artifactId>
+        <version>${version.ktor}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>io.ktor</groupId>
+        <artifactId>ktor-server-content-negotiation-jvm</artifactId>
+        <version>${version.ktor}</version>
+        <scope>test</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <dependencies>
