--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -48,7 +48,7 @@
       <dependency>
         <groupId>xyz.block</groupId>
         <artifactId>tbdex</artifactId>
-        <version>${version.tbdex}</version>
+        <version>0.10.0-yessier</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
