--- a/examples/tutorials/pom.xml
+++ b/examples/tutorials/pom.xml
@@ -48,7 +48,7 @@
       <dependency>
         <groupId>xyz.block</groupId>
         <artifactId>tbdex</artifactId>
-        <version>${version.tbdex}</version>
+        <version>0.10.0-yessier</version>
       </dependency>
       <dependency>
         <groupId>io.ktor</groupId>
@@ -95,62 +95,20 @@
       <dependency>
         <groupId>xyz.block</groupId>
         <artifactId>web5-credentials</artifactId>
-        <version>0.0.11</version>
+        <version>0.0.11-test</version>
       </dependency>
       <dependency>
         <groupId>xyz.block</groupId>
         <artifactId>web5-dids</artifactId>
-        <version>0.0.11</version>
+        <version>0.0.11-more-test</version>
       </dependency>
       <dependency>
         <groupId>xyz.block</groupId>
         <artifactId>web5-crypto</artifactId>
-        <version>0.0.11</version>
+        <version>0.0.1-hello</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
-  <dependencies>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>xyz.block</groupId>
-      <artifactId>tbdex</artifactId>
-      <version>0.10.0-yo</version>
-    </dependency>
-    <dependency>
-      <groupId>io.ktor</groupId>
-      <artifactId>ktor-server-netty-jvm</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.squareup.okhttp3</groupId>
-      <artifactId>mockwebserver</artifactId>
-      <version>4.11.0</version>
-    </dependency>
-    <dependency>
-      <groupId>io.ktor</groupId>
-      <artifactId>ktor-server-test-host</artifactId>
-      <version>${version.ktor}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.ktor</groupId>
-      <artifactId>ktor-server-content-negotiation-jvm</artifactId>
-    </dependency>
-  </dependencies>
   <build>
     <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
     <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
