--- a/package.json
+++ b/package.json
@@ -25,29 +25,30 @@
     "shnip": "node ./shnippet/src/cli --structure match && node ./shnippet/src/cli --structure byLanguage"
   },
   "dependencies": {
+    "@docusaurus/theme-mermaid": "^3.1.1",
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@web5/api": "0.8.4",
-    "@web5/credentials": "0.4.2",
-    "@web5/dids": "0.4.1",
-    "@web5/crypto": "0.4.0",
-    "@web5/crypto-aws-kms": "0.2.0",
     "@tbdex/http-client": "0.26.0",
     "@tbdex/http-server": "0.26.0",
     "@tbdex/protocol": "0.26.0",
-    "bluehawk": "1.4.0",
+    "@web5/api": "0.8.4",
+    "@web5/credentials": "0.4.2",
+    "@web5/crypto": "0.4.0",
+    "@web5/crypto-aws-kms": "0.2.0",
+    "@web5/dids": "0.4.1",
     "@web5/identity-agent": "0.2.5",
+    "bluehawk": "1.4.0",
+    "express": "4.18.2",
     "font-awesome": "4.7.0",
     "googleapis": "128.0.0",
-    "node-fetch": "3.3.2",
     "msw": "2.1.7",
+    "node-fetch": "3.3.2",
     "process": "0.11.10",
     "react-fontawesome": "1.7.1",
     "react-markdown": "8.0.7",
     "react-slick": "0.29.0",
-    "slick-carousel": "1.8.1",
-    "express": "4.18.2"
+    "slick-carousel": "1.8.1"
   },
   "devDependencies": {
     "@vitest/browser": "0.34.1",
@@ -56,15 +57,15 @@
     "glob": "10.3.10",
     "husky": "8.0.3",
     "playwright": "1.39.0",
+    "rimraf": "5.0.5",
     "start-server-and-test": "2.0.3",
     "vitest": "0.34.1",
-    "webdriverio": "8.13.13",
-    "rimraf": "5.0.5"
+    "webdriverio": "8.13.13"
   },
   "pnpm": {
     "overrides": {
       "vite": "5.1.4",
-      "nuxt" : "3.10.3",
+      "nuxt": "3.10.3",
       "postcss": "8.4.31"
     }
   }
