--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "preinstall": "node propagateSdkVersions.js && npx only-allow pnpm",
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "node propagateSdkVersions.js",
     "start": "pnpm run shnip && pnpm --filter site run start",
     "start:feedback-server": "pnpm --filter feedback-server run start",
     "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
